@@ -2,8 +2,6 @@ The Javascript file is untested. It probably need a rewrite... but I suck at Jav
 
 The Uniqueness validation does too many server side calls.
 
-Uniqueness doesn't work yet for nested fields
-
 Validation checks currently happen on keyup, blur and form submission. The keyup and blur checks should be configurable.
 
 Moar Browser testing!
