@@ -265,7 +265,20 @@ var clientSideValidations = new function() {
         if (validator.id) {
           data['id'] = validator.id;
         }
-        data[selector.attr('name')] = selector.val();
+
+        // Kind of a hack but this will isolate the resource and attribute from the selector name.
+        // e.g. user[records_attributes][0][title] => records[title]
+        // e.g. user[record_attributes][title] => record[title]
+        // e.g. user[title] => user[title]
+        // Server side handles classifying the resource properly
+        if (/_attributes]/.test(selector.attr('name'))) {
+          var name = selector.attr('name').match(/\[\w+_attributes]/g).pop().match(/\[(\w+)_attributes]/).pop();
+          name += /(\[\w+])$/.exec(selector.attr('name'))[1];
+        } else {
+          var name = selector.attr('name');
+        }
+        data[name] = selector.val();
+
         var response = $.ajax({
           url: '/validators/uniqueness.json',
           data: data,
