@@ -1,5 +1,6 @@
 == 3.0.0.alpha.8
   Range JSON fix
+  Handle nested resources for uniqueness validator
 
 == 3.0.0.alpha.7
   Regex JSON fix
